Update changelog with entry under Bug Fixes

--- a/changelog.d/20260123_160331_jennifer.pollack_159_psf_output_from_trained_model.md
+++ b/changelog.d/20260123_160331_jennifer.pollack_159_psf_output_from_trained_model.md
@@ -21,12 +21,10 @@ For top level release notes, leave all the headers commented out.
 - Added `psf_model_loader.py` module for centralized model weights loading
 
 
-<!--
 ### Bug fixes
 
-- A bullet item for the Bug fixes category.
+- Fix logger formatting for relative RMSE metrics in `metrics.py` (values were not being displayed)
 
--->
 <!--
 ### Performance improvements
 
